Add print model after training

--- a/000_001 - initialization importance.ipynb
+++ b/000_001 - initialization importance.ipynb
@@ -354,6 +354,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ebaba5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_model( model_1 )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8c43b684",
    "metadata": {},
@@ -388,6 +398,16 @@
     "with torch.no_grad():\n",
     "   print( nn.MSELoss()( model_2( tensor_x ), tensor_y_2 ).item() )\n",
     "HTML( jshtml_2 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf5bfa58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_model( model_2 )"
    ]
   }
  ],
